Replace HiveMetastore get*Statistics with get*ColumnStatistics
It is simpler and more efficient to only support column statistics in
HiveMetastore since the HiveBasicStatistics are actually extracted from
table/partition properties, and are not loaded the underlying metastore
implementation.

(cherry picked from commit 52a17f11a6552b589e51e94c52b9d585432863fc)